Fix up the spacing of the logo
To conform with the styleguide, fix the spacing for the logo between the
text and the crest when in a mobile view.

--- a/app/assets/stylesheets/organisations.scss
+++ b/app/assets/stylesheets/organisations.scss
@@ -29,6 +29,11 @@
     margin-left: 10px;
     margin-left: 1rem;
     display: block;
+
+    @include media (mobile) {
+      padding-top: 23px;
+      padding-top: 2.3rem;
+    }
   }
 
   &.single-line {
